--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 </head>
 <body>
 <h1>This is my website.</h1>
-<p><a href="http://scratch.mit.edu/users/_CodeLyoko>My Scratch account</a></p>
+<p><a href="http://scratch.mit.edu/users/_CodeLyoko">My Scratch account</a></p>
+<h3>My Work-In-Progresses</h3>
 <ul>
+  <li>Webpage creator</li>
+  <li>Pen Rendering Engine</li>
 </ul>
 </body>
 </html>
