--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
   <li>Webpage creator</li>
   <li>Pen Rendering Engine</li>
 </ul>
+<h3>My JS Scratch Extensions</h3>
+<ul>
+  <li><a href=/scratch-exstensions/98387150>() is ()</a></li>
+</ul>
 </body>
 </html>
