--- a/custom-extensions/98387150/index.html
+++ b/custom-extensions/98387150/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset=ASCII lang=en-us />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <title>&quot;() is ()&quot; block (Case-Sensative!)</title>
   </head>
   <body>
@@ -13,5 +14,9 @@
     <div class=preview>
       <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/98387150/?autostart=true" frameborder="0" allowfullscreen></iframe>
     </div>
+    <h5>Once the project loads, click here to <a id=clickHere>to enable the extension</a></h5>
+    <script>
+      $('#clickHere').click(function() {$('body').append('<script src=extension.js><\/script>');$('#clickHere').text("");});
+    </script>
   </body>
 </html>
