--- a/custom-extensions/98387150/index.html
+++ b/custom-extensions/98387150/index.html
@@ -4,6 +4,7 @@
     <meta charset=ASCII lang=en-us />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <title>&quot;() is ()&quot; block (Case-Sensative!)</title>
+    <link href=http://clproject.github.io/.css rel=stylesheet type="text\css" media=all />
   </head>
   <body>
     <div class=description>
