--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>_CodeLyoko on Scratch</title>
+    <link href=http://clproject.github.io/.css rel=stylesheet type="text\css" media=all />
   </head>
   <body>
     <h1>This is my website.</h1>
