--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <ul>
      <li><a href=/custom-extensions/98387150>() is ()</a></li>
     </ul>
+    <a href='http://internetometer.com/give/45435'><img src='http://internetometer.com/image/45435.png'/></a>
   </body>
 </html>
