--- a/index.xhtml
+++ b/index.xhtml
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>_CodeLyoko on Scratch</title>
-    <link href=http://clproject.github.io/main.css rel=stylesheet type="text\css" media=all />
+    <link href="http://clproject.github.io/main.css" rel="stylesheet" type="text\css" media="all" />
   </head>
   <body>
     <h1>This is my website.</h1>
@@ -14,7 +15,7 @@
     </ul>
     <h3>My JS Scratch Extensions</h3>
     <ul>
-     <li><a href=/custom-extensions/98387150>() is ()</a></li>
+     <li><a href="/custom-extensions/98387150">() is ()</a></li>
     </ul>
     <a href='http://internetometer.com/give/45435'><img src='http://internetometer.com/image/45435.png'/></a>
   </body>
