--- a/index.xhtml
+++ b/index.xhtml
@@ -17,6 +17,6 @@
     <ul>
      <li><a href="/custom-extensions/98387150">() is ()</a></li>
     </ul>
-    <a href='http://internetometer.com/give/45435'><img src='http://internetometer.com/image/45435.png'/></a>
+    <a href='http://internetometer.com/give/45435' alt='click to give me an internet'><img src='http://internetometer.com/image/45435.png'/></a>
   </body>
 </html>
