--- a/index.xhtml
+++ b/index.xhtml
@@ -4,6 +4,7 @@
   <head>
     <title>_CodeLyoko on Scratch</title>
     <link href="http://clproject.github.io/main.css" rel="stylesheet" type="text\css" media="all" />
+    <meta charset="UTF-8" />
   </head>
   <body>
     <h1>This is my website.</h1>
