--- a/index.xhtml
+++ b/index.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>_CodeLyoko on Scratch</title>
-    <link href="http://clproject.github.io/main.css" rel="stylesheet" type="text\css" media="all" />
+    <link href="http://clproject.github.io/main.css" rel="stylesheet" type="text/css" media="all" />
     <meta charset="UTF-8" />
   </head>
   <body>
@@ -18,6 +18,7 @@
     <ul>
      <li><a href="/custom-extensions/98387150">() is ()</a></li>
     </ul>
-    <a href='http://internetometer.com/give/45435' alt='click to give me an internet'><img src='http://internetometer.com/image/45435.png'/></a>
+    <a href='http://internetometer.com/give/45435'><img src='http://internetometer.com/image/45435.png' alt='click to give me an internet'
+/></a>
   </body>
 </html>
