--- a/index.xhtml
+++ b/index.xhtml
@@ -4,7 +4,7 @@
   <head>
     <title>_CodeLyoko on Scratch</title>
     <link href="http://clproject.github.io/main.css" rel="stylesheet" type="text/css" media="all" />
-    <meta type="charset" content="UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1"/>
   </head>
   <body>
     <h1>This is my website.</h1>
