--- a/index.xhtml
+++ b/index.xhtml
@@ -21,5 +21,13 @@
     <p>
     <a href='http://internetometer.com/give/45435'><p><img src='http://internetometer.com/image/45435.png' alt='click to give me an internet'
 /></p></a></p>
+ <p>
+    <a href="http://validator.w3.org/check?uri=referer"><img
+      src="http://www.w3.org/Icons/valid-xhtml11" alt="Valid XHTML 1.1" height="31" width="88" /></a><a href="http://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="http://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    </a>
+  </p>
   </body>
 </html>
