--- a/custom-extensions/98387150/index.xhtml
+++ b/custom-extensions/98387150/index.xhtml
@@ -11,5 +11,13 @@
       <h1>() is ()</h1>
       <h5>A case-sensative custom block &amp; extension. Get the <a href="extension.js">extension code</a>, or use <a href="http://scratchx.org/?url=http://clproject.github.io/custom-extensions/98387150/extension.js#scratch">ScratchX.</a></h5>
     </div>
+     <p>
+    <a href="http://validator.w3.org/check?uri=referer"><img
+      src="http://www.w3.org/Icons/valid-xhtml11" alt="Valid XHTML 1.1" height="31" width="88" /></a>
+      <a href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:88px;height:31px"
+            src="http://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    </a>
+  </p>
   </body>
 </html>
