--- a/index.xhtml
+++ b/index.xhtml
@@ -5,8 +5,10 @@
     <title>_CodeLyoko on Scratch</title>
     <link href="http://clproject.github.io/main.css" rel="stylesheet" type="text/css" media="all" />
     <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1"/>
+    <script src="https://apis.google.com/js/platform.js" async="async" defer="defer"></script>
   </head>
   <body>
+    <div id="main">
     <h1>This is my website.</h1>
     <p><a href="http://scratch.mit.edu/users/_CodeLyoko">My Scratch account</a></p>
     <h3>My Work-In-Progresses</h3>
@@ -28,5 +30,10 @@
             alt="Valid CSS!" />
     </a>
   </p>
+  </div>
+  <script>
+    $('#main').css("{margin-left: 100px}");
+  </script>
+  <div class="g-plusone"></div>
   </body>
 </html>
