--- a/index.xhtml
+++ b/index.xhtml
@@ -4,9 +4,7 @@
   <head>
     <title>_CodeLyoko on Scratch</title>
     <link href="http://clproject.github.io/main.css" rel="stylesheet" type="text/css" media="all" />
-    <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1"/>
-    <script src="https://apis.google.com/js/platform.js" async="async" defer="defer"></script>
-  </head>
+    <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1"/></head>
   <body>
     <div id="main">
     <h1>This is my website.</h1>
@@ -34,6 +32,12 @@
   <script>
     $('#main').css("{margin-left: 100px}");
   </script>
-  <div class="g-plusone"></div>
+  <div class="g-plusone"></div><script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/platform.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
   </body>
 </html>
