--- a/index.xhtml
+++ b/index.xhtml
@@ -29,7 +29,7 @@
     </a>
   </p>
   </div>
-  <div class="g-plusone" style="margin-top: -250px;"></div><script type="text/javascript">
+  <div class="g-plusone" style="margin-bottom:250px;"></div><script type="text/javascript">
   (function() {
     var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
     po.src = 'https://apis.google.com/js/platform.js';
