--- a/index.xhtml
+++ b/index.xhtml
@@ -6,7 +6,14 @@
     <link href="http://clproject.github.io/main.css" rel="stylesheet" type="text/css" media="all" />
     <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1"/></head>
   <body>
-    <div id="main">
+    <div class="g-plusone"></div><script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/platform.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
+    <span id="main">
     <h1>This is my website.</h1>
     <p><a href="http://scratch.mit.edu/users/_CodeLyoko">My Scratch account</a></p>
     <h3>My Work-In-Progresses</h3>
@@ -28,13 +35,6 @@
             alt="Valid CSS!" />
     </a>
   </p>
-  </div>
-  <div class="g-plusone" style="margin-bottom:250px;"></div><script type="text/javascript">
-  (function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://apis.google.com/js/platform.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  })();
-</script>
+  </span>
   </body>
 </html>
