--- a/index.xhtml
+++ b/index.xhtml
@@ -13,7 +13,7 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
   })();
 </script>
-    <span id="main">
+    <div id="main">
     <h1>This is my website.</h1>
     <p><a href="http://scratch.mit.edu/users/_CodeLyoko">My Scratch account</a></p>
     <h3>My Work-In-Progresses</h3>
@@ -35,6 +35,6 @@
             alt="Valid CSS!" />
     </a>
   </p>
-  </span>
+  </div>
   </body>
 </html>
