--- a/index.xhtml
+++ b/index.xhtml
@@ -36,5 +36,9 @@
     </a>
   </p>
   </div>
+  <script>
+    var ____ = document.getElementById("main");
+    ____.scrollTop = -38
+  </script>
   </body>
 </html>
