--- a/index.xhtml
+++ b/index.xhtml
@@ -6,7 +6,7 @@
     <link href="http://clproject.github.io/main.css" rel="stylesheet" type="text/css" media="all" />
     <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1"/></head>
   <body>
-    <div width="25px" height="15px">
+    <div id="googleplus">
     <div class="g-plusone"></div></div> <script type="text/javascript">
   (function() {
     var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
