--- a/index.xhtml
+++ b/index.xhtml
@@ -6,7 +6,7 @@
     <link href="http://clproject.github.io/main.css" rel="stylesheet" type="text/css" media="all" />
     <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1"/></head>
   <body>
-    <div id="googleplus">
+    <div id="googleplus" style="display: inline-block">
     <div class="g-plusone"></div></div> <script type="text/javascript">
   (function() {
     var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
@@ -14,7 +14,7 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
   })();
 </script>
-    <div id="main">
+    <div id="main" style="display: inline-block">
     <h1>This is my website.</h1>
     <p><a href="http://scratch.mit.edu/users/_CodeLyoko">My Scratch account</a></p>
     <h3>My Work-In-Progresses</h3>
