--- a/index.xhtml
+++ b/index.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>_CodeLyoko on Scratch</title>
-    <link href="http://clproject.github.io/main.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="main.css" rel="stylesheet" type="text/css" media="all" />
     <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1"/></head>
   <body>
     <div id="googleplus" style="display: inline-block">
