--- a/custom-extensions/98387150/index.xhtml
+++ b/custom-extensions/98387150/index.xhtml
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1" />
     <title>&quot;() is ()&quot; block (Case-Sensative!)</title>
-    <link href="http://clproject.github.io/main.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="../../main.css" rel="stylesheet" type="text/css" media="all" />
   </head>
   <body>
     <div class="description">
