--- a/index.xhtml
+++ b/index.xhtml
@@ -8,6 +8,11 @@
   <body>
     <div id="googleplus" style="display: inline-block">
     <div class="g-plusone"></div></div> <script type="text/javascript">
+    <div id="google_translate_element" style="display:inline-block;float:right"></div><script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+      }
+    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   (function() {
     var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
     po.src = 'https://apis.google.com/js/platform.js';
@@ -35,6 +40,8 @@
             src="http://jigsaw.w3.org/css-validator/images/vcss"
             alt="Valid CSS!" />
     </a>
+    
+        
   </p>
   </div>
   </body>
