--- a/redirect/unsafe/github.htm
+++ b/redirect/unsafe/github.htm
@@ -1,1 +1,6 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta http-equiv=refresh data="8;url=//github.com/MegaCode18" />
+    </head>
+</html>
