--- a/redirect/unsafe/github.htm
+++ b/redirect/unsafe/github.htm
@@ -7,6 +7,6 @@
         <p style=size:3em>PLEASE READ CAREFULLY! This website you are about to visit is NOT monitored by the Scratch community guidelines.
         We do not guarantee you any safety WHATSOEVER on this website, unless otherwise noted.</p>
         <p>To go back to the home page <a href="../../">click here</a>.</p>
-        <p>To continue, please wait; if you are not automatically redirected, <a href="//github.com/MegaCode18">click here</a>.</p>
+        <p>To continue, please wait; if you are not automatically redirected in a few seconds, <a href="//github.com/MegaCode18">click here</a>.</p>
     </body>
 </html>
