--- a/redirect/unsafe/github.htm
+++ b/redirect/unsafe/github.htm
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv=refresh data="8;url=//github.com/MegaCode18" />
+        <meta http-equiv="refresh" data="4;url=//github.com/MegaCode18" />
+        <script>
+            SetTimeout(function() {
+                window.location = "//github.com/MegaCode18";
+            }, 4000);
+        </script>
     </head>
     <body>
         <p style=size:3em>PLEASE READ CAREFULLY! This website you are about to visit is NOT monitored by the Scratch community guidelines.
