--- a/index.xhtml
+++ b/index.xhtml
@@ -19,7 +19,7 @@
      <li><a href="/custom-extensions/98387150">() is ()</a></li>
     </ul>
     <p>
-    <a href='http://internetometer.com/give/45435'><img src='http://internetometer.com/image/45435.png' alt='click to give me an internet'
+    <a href='http://internetometer.com/give/45435'><img src='http://internetometer.com/image/45435.png' alt='Click here to give me an internet!'
 /></a></p>
  <p>
     <a href="http://validator.w3.org/check?uri=referer"><img
