--- a/custom-extensions/is/index.xhtml
+++ b/custom-extensions/is/index.xhtml
@@ -9,7 +9,7 @@
   <body>
     <div class="description">
       <h1>() is ()</h1>
-      <h5>A case-sensative custom block &amp; extension. Get the <a href="extension.js" target="_blank">extension code</a><img src="../../newtab.svg" alt="Opens in a new tab" />, or use <a href="http://scratchx.org/?url=http://clproject.github.io/custom-extensions/98387150/extension.js#scratch" target="_blank">ScratchX.</a><img src="../../newtab.svg" alt="Opens in a new tab" /></h5>
+      <h5>A case-sensative custom block &amp; extension. Get the <a href="extension.js" target="_blank">extension code</a><img src="../../newtab.svg" alt="Opens in a new tab" />, or use <a href="http://scratchx.org/?url=http://megacode987654.github.io/custom-extensions/is/extension.js#scratch" target="_blank">ScratchX.</a><img src="../../newtab.svg" alt="Opens in a new tab" /></h5>
     </div>
      <p>
     <a href="http://validator.w3.org/check?uri=referer"><img
