--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </ul>
     <h3>My JS Scratch Extensions</h3>
     <ul>
-     <li><a href="/custom-extensions/98387150">() is ()</a></li>
+     <li><a href="/custom-extensions/is">() is ()</a></li>
     </ul>
     <p>
     <a href='http://internetometer.com/give/45435'><img src='http://internetometer.com/image/45435.png' alt='click to give me an internet'
